# CSICode-V1M

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  Readme.md
.github/workflows/: build-linux.yml  build-macos-sign.yml  build-macos.yml  build-windows.yml  cmake-multi-platform.yml
WDL/: wdlcstring.h
Windows/reaper_csurf_integrator/: reaper_csurf_integrator.sln
Windows/reaper_csurf_integrator/reaper_csurf_integrator/: reaper_csurf_integrator.vcxproj  reaper_csurf_integrator.vcxproj.filters
reaper_csurf_integrator/: CMakeLists.txt  control_surface_OSC_widgets.h  control_surface_Reaper_actions.h  control_surface_action_contexts.h  control_surface_integrator.cpp  control_surface_integrator.h  control_surface_integrator_Reaper.h  control_surface_integrator_ui.cpp  control_surface_manager_actions.h  control_surface_midi_widgets.h  handy_functions.h  main.cpp  oscpkt.hh  reaper_plugin.h  res.rc  resource.h
reaper_csurf_integrator.xcodeproj/: project.pbxproj
